--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -165,60 +165,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1546"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r06-cJ-qaW">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQ9-9W-iNw">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="1546"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="spI-zv-M8M">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1600"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVP-Mg-BqC" userLabel="contentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="2809"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1234" translatesAutoresizingMaskIntoConstraints="NO" id="W7W-hi-d5r">
-                                                <rect key="frame" x="147" y="715" width="267" height="157"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="QqJ-Rx-H2t">
+                                                <rect key="frame" x="8" y="8" width="220" height="304"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_2743" translatesAutoresizingMaskIntoConstraints="NO" id="7NX-Vv-thK">
-                                                <rect key="frame" x="-37" y="880" width="255" height="293"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spaday" translatesAutoresizingMaskIntoConstraints="NO" id="WAD-7H-J4V">
+                                                <rect key="frame" x="8" y="525" width="220" height="287"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spaday" translatesAutoresizingMaskIntoConstraints="NO" id="hcr-EH-JbS">
-                                                <rect key="frame" x="10" y="450" width="206" height="257"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1234" translatesAutoresizingMaskIntoConstraints="NO" id="wuq-IC-cQ2">
+                                                <rect key="frame" x="112" y="820" width="294" height="204"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="prom" translatesAutoresizingMaskIntoConstraints="NO" id="aTI-ps-UmV">
-                                                <rect key="frame" x="145" y="265" width="261" height="177"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_2743" translatesAutoresizingMaskIntoConstraints="NO" id="5bm-Av-WmR">
+                                                <rect key="frame" x="8" y="1032" width="172" height="336"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="LD4-JZ-W6R">
-                                                <rect key="frame" x="8" y="8" width="210" height="249"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="prom" translatesAutoresizingMaskIntoConstraints="NO" id="vPv-ax-koM">
+                                                <rect key="frame" x="139" y="320" width="267" height="197"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2020-07-29 at 10.37.39 AM" translatesAutoresizingMaskIntoConstraints="NO" id="ymK-na-oLB">
-                                                <rect key="frame" x="114" y="1181" width="282" height="151"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Screen Shot 2020-07-29 at 10.37.39 AM" translatesAutoresizingMaskIntoConstraints="NO" id="8Zd-qR-3fy">
+                                                <rect key="frame" x="119" y="1376" width="280" height="149"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="1600" id="asn-SR-L8m"/>
+                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="leading" secondItem="CVP-Mg-BqC" secondAttribute="leading" constant="119" id="68y-4h-DO8"/>
+                                            <constraint firstAttribute="trailing" secondItem="8Zd-qR-3fy" secondAttribute="trailing" constant="15" id="Fs5-kM-hUc"/>
+                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="leading" secondItem="CVP-Mg-BqC" secondAttribute="leading" constant="119" id="J2i-xX-Ov5"/>
+                                            <constraint firstAttribute="trailing" secondItem="8Zd-qR-3fy" secondAttribute="trailing" constant="15" id="Jfg-eo-cyy"/>
+                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="top" secondItem="CVP-Mg-BqC" secondAttribute="top" constant="1376" id="M1o-Za-ZEK"/>
+                                            <constraint firstAttribute="bottom" secondItem="8Zd-qR-3fy" secondAttribute="bottom" constant="21" id="nlF-sm-Cen"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="spI-zv-M8M" firstAttribute="leading" secondItem="ZHu-0H-ROe" secondAttribute="leading" id="S0x-LI-0cE"/>
-                                    <constraint firstItem="spI-zv-M8M" firstAttribute="trailing" secondItem="ZHu-0H-ROe" secondAttribute="trailing" id="Us9-Rz-z0U"/>
-                                    <constraint firstItem="spI-zv-M8M" firstAttribute="top" secondItem="ZHu-0H-ROe" secondAttribute="top" id="dgf-dz-RYL"/>
-                                    <constraint firstAttribute="bottom" secondItem="spI-zv-M8M" secondAttribute="bottom" constant="-240" id="jbV-v7-irU"/>
+                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="top" secondItem="jQ9-9W-iNw" secondAttribute="top" id="DOS-Dw-3LO"/>
+                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="leading" secondItem="jQ9-9W-iNw" secondAttribute="leading" id="HkR-IL-hG4"/>
+                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="height" secondItem="jQ9-9W-iNw" secondAttribute="height" priority="250" id="JIE-F7-a7k"/>
+                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="width" secondItem="jQ9-9W-iNw" secondAttribute="width" id="KFL-vs-1kS"/>
+                                    <constraint firstAttribute="bottom" secondItem="CVP-Mg-BqC" secondAttribute="bottom" id="MZb-1O-m3t"/>
+                                    <constraint firstAttribute="trailing" secondItem="CVP-Mg-BqC" secondAttribute="trailing" id="iQ6-yz-Q0C"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="wLC-y5-R7N"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="ZHu-0H-ROe"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="UTd-Ck-jfu"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="hkE-cM-5jy"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="r06-cJ-qaW" firstAttribute="top" secondItem="vv4-KP-Ins" secondAttribute="top" id="IiP-TI-HIg"/>
-                            <constraint firstItem="r06-cJ-qaW" firstAttribute="leading" secondItem="vv4-KP-Ins" secondAttribute="leading" id="N4P-lJ-UyN"/>
-                            <constraint firstAttribute="bottom" secondItem="r06-cJ-qaW" secondAttribute="bottom" id="Sfd-ub-N3C"/>
-                            <constraint firstItem="spI-zv-M8M" firstAttribute="width" secondItem="7Ug-1b-0UH" secondAttribute="width" id="i4P-oL-w5p"/>
-                            <constraint firstItem="r06-cJ-qaW" firstAttribute="trailing" secondItem="vv4-KP-Ins" secondAttribute="trailing" id="tCw-5m-tfF"/>
+                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="leading" secondItem="vv4-KP-Ins" secondAttribute="leading" id="61S-cV-87l"/>
+                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="top" secondItem="vv4-KP-Ins" secondAttribute="top" id="FLm-f7-njH"/>
+                            <constraint firstItem="vv4-KP-Ins" firstAttribute="trailing" secondItem="jQ9-9W-iNw" secondAttribute="trailing" id="M05-hP-qT3"/>
+                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="bottom" secondItem="vv4-KP-Ins" secondAttribute="bottom" constant="34" id="UZs-dj-AgJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vv4-KP-Ins"/>
                     </view>
