--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -185,77 +185,89 @@
             <objects>
                 <viewController id="Mcc-08-kcE" customClass="myMemoriesViewController" customModule="COVIDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Ug-1b-0UH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1546"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1446"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQ9-9W-iNw">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="1546"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ygY-AK-Srt">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="1446"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVP-Mg-BqC" userLabel="contentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="2809"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AvX-eW-V9b">
+                                        <rect key="frame" x="0.0" y="859" width="414" height="1446"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="QqJ-Rx-H2t">
-                                                <rect key="frame" x="8" y="8" width="220" height="304"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="fFc-PK-Ehq">
+                                                <rect key="frame" x="8" y="8" width="190" height="256"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="spaday" translatesAutoresizingMaskIntoConstraints="NO" id="WAD-7H-J4V">
-                                                <rect key="frame" x="8" y="525" width="220" height="287"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="prom" translatesAutoresizingMaskIntoConstraints="NO" id="Qox-AJ-ubW">
+                                                <rect key="frame" x="139" y="272" width="267" height="192"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1234" translatesAutoresizingMaskIntoConstraints="NO" id="wuq-IC-cQ2">
-                                                <rect key="frame" x="112" y="820" width="294" height="204"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_1234" translatesAutoresizingMaskIntoConstraints="NO" id="yli-A0-kWk">
+                                                <rect key="frame" x="139" y="744" width="267" height="187"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_2743" translatesAutoresizingMaskIntoConstraints="NO" id="5bm-Av-WmR">
-                                                <rect key="frame" x="8" y="1032" width="172" height="336"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spaday" translatesAutoresizingMaskIntoConstraints="NO" id="va8-Ko-nLN">
+                                                <rect key="frame" x="12" y="472" width="200" height="264"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="prom" translatesAutoresizingMaskIntoConstraints="NO" id="vPv-ax-koM">
-                                                <rect key="frame" x="139" y="320" width="267" height="197"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_2743" translatesAutoresizingMaskIntoConstraints="NO" id="7sN-6F-w0P">
+                                                <rect key="frame" x="8" y="939" width="170" height="1624"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Screen Shot 2020-07-29 at 10.37.39 AM" translatesAutoresizingMaskIntoConstraints="NO" id="8Zd-qR-3fy">
-                                                <rect key="frame" x="119" y="1376" width="280" height="149"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Screen Shot 2020-07-29 at 10.37.39 AM" translatesAutoresizingMaskIntoConstraints="NO" id="ohK-pl-P7k">
+                                                <rect key="frame" x="127" y="1278" width="279" height="144"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="leading" secondItem="CVP-Mg-BqC" secondAttribute="leading" constant="119" id="68y-4h-DO8"/>
-                                            <constraint firstAttribute="trailing" secondItem="8Zd-qR-3fy" secondAttribute="trailing" constant="15" id="Fs5-kM-hUc"/>
-                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="leading" secondItem="CVP-Mg-BqC" secondAttribute="leading" constant="119" id="J2i-xX-Ov5"/>
-                                            <constraint firstAttribute="trailing" secondItem="8Zd-qR-3fy" secondAttribute="trailing" constant="15" id="Jfg-eo-cyy"/>
-                                            <constraint firstItem="8Zd-qR-3fy" firstAttribute="top" secondItem="CVP-Mg-BqC" secondAttribute="top" constant="1376" id="M1o-Za-ZEK"/>
-                                            <constraint firstAttribute="bottom" secondItem="8Zd-qR-3fy" secondAttribute="bottom" constant="21" id="nlF-sm-Cen"/>
+                                            <constraint firstItem="yli-A0-kWk" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="139" id="2hN-j1-Dwl"/>
+                                            <constraint firstItem="yli-A0-kWk" firstAttribute="top" secondItem="va8-Ko-nLN" secondAttribute="bottom" constant="8" id="5Iw-gz-AqA"/>
+                                            <constraint firstItem="fFc-PK-Ehq" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="8" id="5YY-Wc-4Xm"/>
+                                            <constraint firstAttribute="trailing" secondItem="Qox-AJ-ubW" secondAttribute="trailing" constant="8" id="9qW-ed-XXk"/>
+                                            <constraint firstItem="7sN-6F-w0P" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="939" id="CeS-XE-IF2"/>
+                                            <constraint firstItem="fFc-PK-Ehq" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="8" id="DEe-HG-gsq"/>
+                                            <constraint firstAttribute="trailing" secondItem="yli-A0-kWk" secondAttribute="trailing" constant="8" id="ED5-w6-QML"/>
+                                            <constraint firstItem="va8-Ko-nLN" firstAttribute="top" secondItem="Qox-AJ-ubW" secondAttribute="bottom" constant="8" id="Gpt-Ed-GXt"/>
+                                            <constraint firstAttribute="trailing" secondItem="7sN-6F-w0P" secondAttribute="trailing" constant="236" id="KXP-zI-aAu"/>
+                                            <constraint firstItem="7sN-6F-w0P" firstAttribute="top" secondItem="va8-Ko-nLN" secondAttribute="bottom" constant="203" id="PE5-Le-qrk"/>
+                                            <constraint firstItem="yli-A0-kWk" firstAttribute="top" secondItem="Qox-AJ-ubW" secondAttribute="bottom" constant="280" id="PHs-4s-yKD"/>
+                                            <constraint firstItem="7sN-6F-w0P" firstAttribute="top" secondItem="yli-A0-kWk" secondAttribute="bottom" constant="8" id="Pam-GY-5eY"/>
+                                            <constraint firstItem="Qox-AJ-ubW" firstAttribute="top" secondItem="fFc-PK-Ehq" secondAttribute="bottom" constant="8" id="SXl-Yg-lp1"/>
+                                            <constraint firstItem="Qox-AJ-ubW" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="272" id="TPY-QT-LpT"/>
+                                            <constraint firstItem="va8-Ko-nLN" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="472" id="axB-xq-pBJ"/>
+                                            <constraint firstItem="ohK-pl-P7k" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="1278" id="dSj-nb-WKe"/>
+                                            <constraint firstItem="Qox-AJ-ubW" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="139" id="eyX-90-fO3"/>
+                                            <constraint firstItem="7sN-6F-w0P" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="8" id="fBI-mf-pVm"/>
+                                            <constraint firstAttribute="trailing" secondItem="va8-Ko-nLN" secondAttribute="trailing" constant="202" id="k1b-Mh-yW0"/>
+                                            <constraint firstItem="va8-Ko-nLN" firstAttribute="top" secondItem="fFc-PK-Ehq" secondAttribute="bottom" constant="208" id="oRO-n8-G3G"/>
+                                            <constraint firstAttribute="trailing" secondItem="fFc-PK-Ehq" secondAttribute="trailing" constant="216" id="s2O-f5-wMq"/>
+                                            <constraint firstItem="yli-A0-kWk" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="139" id="tyJ-ax-DEX"/>
+                                            <constraint firstItem="va8-Ko-nLN" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="12" id="vKh-kq-Mi3"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="top" secondItem="jQ9-9W-iNw" secondAttribute="top" id="DOS-Dw-3LO"/>
-                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="leading" secondItem="jQ9-9W-iNw" secondAttribute="leading" id="HkR-IL-hG4"/>
-                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="height" secondItem="jQ9-9W-iNw" secondAttribute="height" priority="250" id="JIE-F7-a7k"/>
-                                    <constraint firstItem="CVP-Mg-BqC" firstAttribute="width" secondItem="jQ9-9W-iNw" secondAttribute="width" id="KFL-vs-1kS"/>
-                                    <constraint firstAttribute="bottom" secondItem="CVP-Mg-BqC" secondAttribute="bottom" id="MZb-1O-m3t"/>
-                                    <constraint firstAttribute="trailing" secondItem="CVP-Mg-BqC" secondAttribute="trailing" id="iQ6-yz-Q0C"/>
+                                    <constraint firstItem="AvX-eW-V9b" firstAttribute="leading" secondItem="ygY-AK-Srt" secondAttribute="leading" id="5fy-XV-hMo"/>
+                                    <constraint firstItem="AvX-eW-V9b" firstAttribute="height" secondItem="ygY-AK-Srt" secondAttribute="height" priority="250" id="fiH-bQ-59K"/>
+                                    <constraint firstAttribute="trailing" secondItem="AvX-eW-V9b" secondAttribute="trailing" id="fsV-1f-RJU"/>
+                                    <constraint firstAttribute="bottom" secondItem="AvX-eW-V9b" secondAttribute="bottom" id="qcS-uh-nLE"/>
+                                    <constraint firstItem="AvX-eW-V9b" firstAttribute="top" secondItem="ygY-AK-Srt" secondAttribute="top" id="x9R-Ke-ph4"/>
+                                    <constraint firstItem="AvX-eW-V9b" firstAttribute="width" secondItem="ygY-AK-Srt" secondAttribute="width" id="xbc-Jj-5Ix"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="UTd-Ck-jfu"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="hkE-cM-5jy"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="mHe-uL-qPa"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="gnp-SR-AFe"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="leading" secondItem="vv4-KP-Ins" secondAttribute="leading" id="61S-cV-87l"/>
-                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="top" secondItem="vv4-KP-Ins" secondAttribute="top" id="FLm-f7-njH"/>
-                            <constraint firstItem="vv4-KP-Ins" firstAttribute="trailing" secondItem="jQ9-9W-iNw" secondAttribute="trailing" id="M05-hP-qT3"/>
-                            <constraint firstItem="jQ9-9W-iNw" firstAttribute="bottom" secondItem="vv4-KP-Ins" secondAttribute="bottom" constant="34" id="UZs-dj-AgJ"/>
+                            <constraint firstItem="ygY-AK-Srt" firstAttribute="bottom" secondItem="vv4-KP-Ins" secondAttribute="bottom" constant="34" id="8RT-DY-g2f"/>
+                            <constraint firstItem="ygY-AK-Srt" firstAttribute="leading" secondItem="vv4-KP-Ins" secondAttribute="leading" id="NkI-48-TAr"/>
+                            <constraint firstItem="ygY-AK-Srt" firstAttribute="top" secondItem="vv4-KP-Ins" secondAttribute="top" id="Sh5-rD-7ev"/>
+                            <constraint firstItem="vv4-KP-Ins" firstAttribute="trailing" secondItem="ygY-AK-Srt" secondAttribute="trailing" id="v0r-JP-BhH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vv4-KP-Ins"/>
                     </view>
                     <navigationItem key="navigationItem" id="sQm-En-shK"/>
-                    <size key="freeformSize" width="414" height="1600"/>
+                    <size key="freeformSize" width="414" height="1500"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rP0-A2-a9v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-394.20289855072468" y="1044.6428571428571"/>
+            <point key="canvasLocation" x="-1143.4782608695652" y="1038.6160714285713"/>
         </scene>
         <!--Add Image View Controller-->
         <scene sceneID="LId-xf-6HY">
