--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -227,6 +227,7 @@
                                             <constraint firstItem="yli-A0-kWk" firstAttribute="top" secondItem="va8-Ko-nLN" secondAttribute="bottom" constant="8" id="5Iw-gz-AqA"/>
                                             <constraint firstItem="fFc-PK-Ehq" firstAttribute="leading" secondItem="AvX-eW-V9b" secondAttribute="leading" constant="8" id="5YY-Wc-4Xm"/>
                                             <constraint firstAttribute="trailing" secondItem="Qox-AJ-ubW" secondAttribute="trailing" constant="8" id="9qW-ed-XXk"/>
+                                            <constraint firstAttribute="bottom" secondItem="ohK-pl-P7k" secondAttribute="bottom" constant="24" id="B9C-iI-JuO"/>
                                             <constraint firstItem="7sN-6F-w0P" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="939" id="CeS-XE-IF2"/>
                                             <constraint firstItem="fFc-PK-Ehq" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="8" id="DEe-HG-gsq"/>
                                             <constraint firstAttribute="trailing" secondItem="yli-A0-kWk" secondAttribute="trailing" constant="8" id="ED5-w6-QML"/>
@@ -246,6 +247,7 @@
                                             <constraint firstAttribute="trailing" secondItem="ohK-pl-P7k" secondAttribute="trailing" constant="8" id="fOC-qR-Vis"/>
                                             <constraint firstItem="ohK-pl-P7k" firstAttribute="trailing" secondItem="yli-A0-kWk" secondAttribute="trailing" id="gJt-LJ-eY3"/>
                                             <constraint firstItem="ohK-pl-P7k" firstAttribute="top" secondItem="yli-A0-kWk" secondAttribute="bottom" constant="347" id="hEl-fo-zXx"/>
+                                            <constraint firstItem="yli-A0-kWk" firstAttribute="top" secondItem="AvX-eW-V9b" secondAttribute="top" constant="744" id="hj2-qx-5P9"/>
                                             <constraint firstAttribute="trailing" secondItem="va8-Ko-nLN" secondAttribute="trailing" constant="202" id="k1b-Mh-yW0"/>
                                             <constraint firstItem="va8-Ko-nLN" firstAttribute="top" secondItem="fFc-PK-Ehq" secondAttribute="bottom" constant="208" id="oRO-n8-G3G"/>
                                             <constraint firstAttribute="trailing" secondItem="fFc-PK-Ehq" secondAttribute="trailing" constant="216" id="s2O-f5-wMq"/>
