--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -284,6 +284,21 @@
             </objects>
             <point key="canvasLocation" x="-1143.4782608695652" y="1038.6160714285713"/>
         </scene>
+        <!--Final Image View Controller-->
+        <scene sceneID="zRm-U5-CBc">
+            <objects>
+                <viewController id="e0l-1c-7Nx" customClass="finalImageViewController" customModule="COVIDiary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qWs-8B-zjl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vYO-wQ-p7e"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Un-6d-tra" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-283" y="852"/>
+        </scene>
         <!--Add Image View Controller-->
         <scene sceneID="LId-xf-6HY">
             <objects>
